--- a/baselines/baselines_configs/v0.yaml
+++ b/baselines/baselines_configs/v0.yaml
@@ -26,7 +26,9 @@
       key: language_id_whole_page_fasttext
       keep_languages: [ en ]
       threshold: 0.65
+    - func: cache_split_words_modifier	  
     - func: fineweb_gopher_repetition_filter
     - func: fineweb_gopher_quality_filter
     - func: fineweb_c4_filter
     - func: fineweb_quality_filter
+    - func: uncache_split_words_modifier	
