--- a/job_process_v4.yaml
+++ b/job_process_v4.yaml
@@ -15,7 +15,7 @@ spec:
         - name: cr-docker-registry
       containers:
       - name: dclm-sci
-        image: cr.registry.res.cloud.zhejianglab.com/dataprocess/datarig:v4.0
+        image: cr.registry.res.cloud.zhejianglab.com/dataprocess/datarig:v4.4
         resources:
           requests:
             cpu: "13"
@@ -35,11 +35,11 @@ spec:
             value: "6380"			
         args:
           - "--readable_name"
-          - "r2_refineweb_with_fineweb_tokenizer"
+          - "s1"
           - "--output_dir"
-          - "oss://si002558te8h/dclm/output"
+          - "oss://si002558te8h/dclm/output/dclm_pool_en/"
           - "--config_path"
-          - "baselines/baselines_configs/dclm_baseline_refinedweb_tokenizer.yaml"
+          - "baselines/baselines_configs/language.yaml"
           - "--oss_temp_dir"
           - "oss://si002558te8h/dclm/temp_dir_500/"
           - "--source_name"
@@ -63,8 +63,8 @@ spec:
           - "--ignore_failures"
         volumeMounts:
           - name: dclm-config-volume
-            mountPath: "/app/dclm-sci/baselines/baselines_configs/dclm_baseline_refinedweb_tokenizer.yaml"
-            subPath: "dclm_baseline_refinedweb_tokenizer.yaml"		  
+            mountPath: "/app/dclm-sci/baselines/baselines_configs/language.yaml"
+            subPath: "language.yaml"
         imagePullPolicy: IfNotPresent
       volumes:
         - name: dclm-config-volume
