--- a/c4noclean_prepare.yaml
+++ b/c4noclean_prepare.yaml
@@ -1,7 +1,7 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: c4-noclean-prepare
+  name: c4-noclean-refinedweb
 spec:
   parallelism: 60 # 5x(4-5)C=20C-25C 5x(10-12)G=50-60G per node, (20C-25C)x89 = 1780C-2225C max: 445pod
   completions: 60
@@ -35,11 +35,11 @@ spec:
             value: "6380"			
         args:
           - "--readable_name"
-          - "c4_noclean_prepare"
+          - "c4_noclean_refinedweb"
           - "--output_dir"
           - "oss://si002558te8h/dclm/output/"
           - "--config_path"
-          - "baselines/baselines_configs/prepare.yaml"
+          - "baselines/baselines_configs/refinedweb_rule.yaml"
           - "--oss_temp_dir"
           - "oss://si002558te8h/dclm/pool/temp_dir_500/"
           - "--source_name"
@@ -63,11 +63,11 @@ spec:
           - "--ignore_failures"
         volumeMounts:
           - name: dclm-config-volume
-            mountPath: "/app/dclm-sci/baselines/baselines_configs/language.yaml"
-            subPath: "language.yaml"
+            mountPath: "/app/dclm-sci/baselines/baselines_configs/refinedweb_rule.yaml"
+            subPath: "refinedweb_rule.yaml"
         imagePullPolicy: IfNotPresent
       volumes:
         - name: dclm-config-volume
           configMap:
-            name: dclm-config		
+            name: dclm-config
       restartPolicy: OnFailure
