--- a/baselines/baselines_configs/v2.yaml
+++ b/baselines/baselines_configs/v2.yaml
@@ -3,11 +3,8 @@
   steps:
     - func: bad_words_modifier
       banned_filepath: "baselines/mappers/banlists/ldnoobw.txt"
-      word_remove_key: False
-      redis_record_key: "ldnoobw_bad_words_doc_count"
-    - func: bad_words_modifier
-      banned_filepath: "baselines/mappers/banlists/ldnoobw.txt"
-      word_remove_key: True
+      banned_language: "zh"
+      remove_word: True
       redis_record_key: "zh_bad_words_doc_count"
     - func: url_removal_modifier
     - func: citation_removal_modifier
@@ -35,3 +32,7 @@
     - func: fineweb_quality_filter
     - func: fineweb_gopher_repetition_filter
     - func: uncache_split_words_modifier
+    - func: bad_words_modifier
+      banned_filepath: "baselines/mappers/banlists/ldnoobw.txt"
+      remove_word: False
+      redis_record_key: "ldnoobw_bad_words_doc_count"
