--- a/baselines/baselines_configs/v2.yaml
+++ b/baselines/baselines_configs/v2.yaml
@@ -6,7 +6,12 @@
       banned_language: "zh"
       remove_word: True
       redis_record_key: "zh_bad_words_doc_count"
+    - func: bad_words_modifier
+      banned_filepath: "baselines/mappers/banlists/ldnoobw.txt"
+      remove_word: False
+      redis_record_key: "en_bad_words_doc_count_before"
     - func: url_removal_modifier
+    - func: email_and_phone_removal_modifier
     - func: citation_removal_modifier
     - func: substring_line_modifier        
       max_length: 10 
@@ -35,4 +40,4 @@
     - func: bad_words_modifier
       banned_filepath: "baselines/mappers/banlists/ldnoobw.txt"
       remove_word: False
-      redis_record_key: "ldnoobw_bad_words_doc_count"
+      redis_record_key: "en_bad_words_doc_count_after"
