--- a/baselines/baselines_configs/v2.yaml
+++ b/baselines/baselines_configs/v2.yaml
@@ -39,7 +39,8 @@
     - func: fineweb_gopher_quality_filter
       model: v2
     - func: fineweb_quality_filter
-    - func: fineweb_gopher_repetition_filter
+    - func: massive_web_repetition_filters
+      tokenizer: "fineweb"
     - func: uncache_split_words_modifier
     - func: bad_words_modifier
       banned_filepath: "baselines/mappers/banlists/en-badwords.txt"
