--- a/c4noclean_prepare.yaml
+++ b/c4noclean_prepare.yaml
@@ -1,7 +1,7 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: c4-noclean-fineweb
+  name: c4-noclean-40
 spec:
   parallelism: 40 # 5x(4-5)C=20C-25C 5x(10-12)G=50-60G per node, (20C-25C)x89 = 1780C-2225C max: 445pod
   completions: 40
