--- a/baselines/baselines_configs/v2.yaml
+++ b/baselines/baselines_configs/v2.yaml
@@ -28,6 +28,11 @@
       remove_substring_only: True
     - func: substring_line_modifier
       max_length: 10
+      banlist: "Read more"
+      location: suffix
+      remove_substring_only: True
+    - func: substring_line_modifier
+      max_length: 10
       banlist: "Sign-in"
       location: prefix
       remove_substring_only: True
