--- a/dclm_pool_lang.yaml
+++ b/dclm_pool_lang.yaml
@@ -63,8 +63,8 @@ spec:
           - "--ignore_failures"
         volumeMounts:
           - name: dclm-config-volume
-            mountPath: "/app/dclm-sci/baselines/baselines_configs/fineweb.yaml"
-            subPath: "fineweb.yaml"
+            mountPath: "/app/dclm-sci/baselines/baselines_configs/v2.yaml"
+            subPath: "v2.yaml"
         imagePullPolicy: IfNotPresent
       volumes:
         - name: dclm-config-volume
