--- a/c4noclean_prepare.yaml
+++ b/c4noclean_prepare.yaml
@@ -1,10 +1,10 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: c4-noclean-40
+  name: c4-noclean-60
 spec:
-  parallelism: 40 # 5x(4-5)C=20C-25C 5x(10-12)G=50-60G per node, (20C-25C)x89 = 1780C-2225C max: 445pod
-  completions: 40
+  parallelism: 60 # 5x(4-5)C=20C-25C 5x(10-12)G=50-60G per node, (20C-25C)x89 = 1780C-2225C max: 445pod
+  completions: 60
   backoffLimit: 5  # 如果任务失败后不希望重试，则设置为 0；否则设置为需要的重试次数
   template:
     metadata:
@@ -39,7 +39,7 @@ spec:
           - "--output_dir"
           - "oss://si002558te8h/dclm/output/"
           - "--config_path"
-          - "baselines/baselines_configs/v2.yaml"
+          - "baselines/baselines_configs/v2_fast.yaml"
           - "--oss_temp_dir"
           - "oss://si002558te8h/dclm/pool/temp_dir_500/"
           - "--source_name"
@@ -63,8 +63,8 @@ spec:
           - "--ignore_failures"
         volumeMounts:
           - name: dclm-config-volume
-            mountPath: "/app/dclm-sci/baselines/baselines_configs/v2.yaml"
-            subPath: "v2.yaml"
+            mountPath: "/app/dclm-sci/baselines/baselines_configs/v2_fast.yaml"
+            subPath: "v2_fast.yaml"
         imagePullPolicy: IfNotPresent
       volumes:
         - name: dclm-config-volume
