--- a/baselines/baselines_configs/v2_xf.yaml
+++ b/baselines/baselines_configs/v2_xf.yaml
@@ -23,14 +23,15 @@
       location: prefix
       remove_substring_only: True
     - func: line_removal_modifier
+      min_word_cnt_per_line: 3
     - func: word_length_modifier
     - func: lorem_ipsum_filter
     - func: min_sentences_filter
     - func: cache_split_words_modifier
+    - func: fineweb_gopher_repetition_filter
+    - func: fineweb_quality_filter
     - func: fineweb_gopher_quality_filter
       model: v2
-    - func: fineweb_quality_filter
-    - func: fineweb_gopher_repetition_filter
     - func: uncache_split_words_modifier
     - func: bad_words_modifier
       banned_filepath: "baselines/mappers/banlists/zh-badwords.txt"
