--- a/baselines/baselines_configs/v2_xf.yaml
+++ b/baselines/baselines_configs/v2_xf.yaml
@@ -28,10 +28,11 @@
     - func: lorem_ipsum_filter
     - func: min_sentences_filter
     - func: cache_split_words_modifier
-    - func: fineweb_gopher_repetition_filter
-    - func: fineweb_quality_filter
+    - func: massive_web_repetition_filters
+      tokenizer: "fineweb"
     - func: fineweb_gopher_quality_filter
       model: v2
+    - func: fineweb_quality_filter
     - func: uncache_split_words_modifier
     - func: bad_words_modifier
       banned_filepath: "baselines/mappers/banlists/zh-badwords.txt"
