--- a/c4noclean_prepare.yaml
+++ b/c4noclean_prepare.yaml
@@ -35,7 +35,7 @@ spec:
             value: "6380"			
         args:
           - "--readable_name"
-          - "c4_noclean_v2_min_words3"
+          - "c4_noclean_v2_raw"
           - "--output_dir"
           - "oss://si002558te8h/dclm/output/"
           - "--config_path"
