--- a/job_model_v2.yaml
+++ b/job_model_v2.yaml
@@ -1,10 +1,10 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: datarig1-v4-160
+  name: datarig1-v4-60
 spec:
-  parallelism: 160
-  completions: 160
+  parallelism: 60
+  completions: 60
   backoffLimit: 5
   template:
     metadata:
@@ -15,7 +15,7 @@ spec:
         - name: cr-docker-registry
       initContainers:
       - name: download-model
-        image: cr.registry.res.cloud.zhejianglab.com/dataprocess/datarig:v4.1
+        image: cr.registry.res.cloud.zhejianglab.com/dataprocess/datarig:v4.8
         command: ["/bin/sh", "-c"]
         args:
           - |
@@ -34,7 +34,7 @@ spec:
           - name: OSS_BUCKET
             value: "si002558te8h"
           - name: OSS_OBJECT
-            value: "qwen77_per1000.bin"
+            value: "dclm/model/model.bin"
           - name: TARGET_DIR
             value: "/app/dclm-sci/baselines/mappers/enrichers/quality_prediction_enrichment_models/"
         volumeMounts:
@@ -42,14 +42,14 @@ spec:
             mountPath: /app/models
       containers:
       - name: dclm-sci
-        image: cr.registry.res.cloud.zhejianglab.com/dataprocess/datarig:v4.1
+        image: cr.registry.res.cloud.zhejianglab.com/dataprocess/datarig:v4.8
         resources:
           requests:
-            cpu: "13"
-            memory: "26Gi"
+            cpu: "26"
+            memory: "52Gi"
           limits:
-            cpu: "15"
-            memory: "28Gi"
+            cpu: "30"
+            memory: "56Gi"
         command: ["/app/dclm-sci/start.sh"]
         env:
           - name: RAY_DEDUP_LOGS
@@ -62,7 +62,7 @@ spec:
             value: "6380"
         args:
           - "--readable_name"
-          - "dclm_baseline_filtered_test"
+          - "dclm_baseline_equipment"
           - "--output_dir"
           - "oss://si002558te8h/dclm/output"
           - "--config_path"
