--- a/job_model_v2.yaml
+++ b/job_model_v2.yaml
@@ -26,7 +26,7 @@ spec:
             ls -lah $TARGET_DIR
         env:
           - name: OSS_ENDPOINT
-            value: "oss-cn-hangzhou.aliyuncs.com"
+            value: "oss-cn-hangzhou-zjy-d01-a.res.cloud.zhejianglab.com"
           - name: OSS_ACCESS_KEY_ID
             value: "D3XdW8uT66mdJ3TO"
           - name: OSS_ACCESS_KEY_SECRET
