--- a/job_model_v2.yaml
+++ b/job_model_v2.yaml
@@ -74,7 +74,7 @@ spec:
           - "--max_file_size_mb"
           - "500"
           - "--queue_id"
-          - "default"
+          - "url"
           - "--ray_num_cpus"
           - "1"
           - "--workers"
