--- a/baselines/baselines_configs/equipment_fasttext_filter.yaml
+++ b/baselines/baselines_configs/equipment_fasttext_filter.yaml
@@ -3,6 +3,7 @@
     - func: classify_fasttext_hq_prob_enricher
       model_filename: equipment.bin
       key: equip_score
+      label_name: __label__IC
     - func: quality_filter
       key: equip_score
       threshold: 0.9
