--- a/baselines/baselines_configs/v2_1.yaml
+++ b/baselines/baselines_configs/v2_1.yaml
@@ -2,3 +2,6 @@
 - source: cc
   steps:
     - func: fineweb_quality_filter
+      line_punct_thr: 0.22
+      high_quality_ratio_value: 0.7
+      short_line_ratio: 0.6
