--- a/c4noclean_prepare.yaml
+++ b/c4noclean_prepare.yaml
@@ -15,7 +15,7 @@ spec:
         - name: cr-docker-registry
       containers:
       - name: dclm-sci
-        image: cr.registry.res.cloud.zhejianglab.com/dataprocess/datarig:v4.8
+        image: cr.registry.res.cloud.zhejianglab.com/dataprocess/datarig:v4.9
         resources:
           requests:
             cpu: "26"
@@ -35,11 +35,11 @@ spec:
             value: "6380"			
         args:
           - "--readable_name"
-          - "c4_noclean_v2_raw"
+          - "c4_noclean_v2_1_sampled"
           - "--output_dir"
           - "oss://si002558te8h/dclm/output/"
           - "--config_path"
-          - "baselines/baselines_configs/v2_xf.yaml"
+          - "baselines/baselines_configs/v2_1.yaml"
           - "--oss_temp_dir"
           - "oss://si002558te8h/dclm/pool/temp_dir_500/"
           - "--source_name"
@@ -51,7 +51,7 @@ spec:
           - "--ray_num_cpus"
           - "1"
           - "--workers"
-          - "1"
+          - "2"
           - "--split_workers"
           - "8"		  
           - "--chunk_size"
@@ -63,8 +63,8 @@ spec:
           - "--ignore_failures"
         volumeMounts:
           - name: dclm-config-volume
-            mountPath: "/app/dclm-sci/baselines/baselines_configs/v2_xf.yaml"
-            subPath: "v2_xf.yaml"
+            mountPath: "/app/dclm-sci/baselines/baselines_configs/v2_1.yaml"
+            subPath: "v2_1.yaml"
         imagePullPolicy: IfNotPresent
       volumes:
         - name: dclm-config-volume
