--- a/c4noclean_prepare.yaml
+++ b/c4noclean_prepare.yaml
@@ -1,10 +1,10 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: c4-noclean-60
+  name: c4-noclean-80
 spec:
-  parallelism: 60 # 5x(4-5)C=20C-25C 5x(10-12)G=50-60G per node, (20C-25C)x89 = 1780C-2225C max: 445pod
-  completions: 60
+  parallelism: 80 # 5x(4-5)C=20C-25C 5x(10-12)G=50-60G per node, (20C-25C)x89 = 1780C-2225C max: 445pod
+  completions: 80
   backoffLimit: 5  # 如果任务失败后不希望重试，则设置为 0；否则设置为需要的重试次数
   template:
     metadata:
@@ -35,11 +35,11 @@ spec:
             value: "6380"			
         args:
           - "--readable_name"
-          - "c4_noclean_v2_raw_min_word_3"
+          - "c4_noclean_v2_min_word_3_sampled"
           - "--output_dir"
           - "oss://si002558te8h/dclm/output/"
           - "--config_path"
-          - "baselines/baselines_configs/v2_xf2.yaml"
+          - "baselines/baselines_configs/v2_1.yaml"
           - "--oss_temp_dir"
           - "oss://si002558te8h/dclm/pool/temp_dir_500/"
           - "--source_name"
@@ -63,8 +63,8 @@ spec:
           - "--ignore_failures"
         volumeMounts:
           - name: dclm-config-volume
-            mountPath: "/app/dclm-sci/baselines/baselines_configs/v2_xf2.yaml"
-            subPath: "v2_xf2.yaml"
+            mountPath: "/app/dclm-sci/baselines/baselines_configs/v2_1.yaml"
+            subPath: "v2_1.yaml"
         imagePullPolicy: IfNotPresent
       volumes:
         - name: dclm-config-volume
