--- a/rust_processing/quality-rs/Cargo.toml
+++ b/rust_processing/quality-rs/Cargo.toml
@@ -4,3 +4,19 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+anyhow = "1.0"
+serde_json = "1.0.97"
+tokio = { version = "1.36.0", features = ["full"] }
+async-compression = {version ="0.4.6", features=["all"]}
+zstd = "0.13.1"
+glob = "0.3.1"
+rand = "0.8"
+threadpool = "1.8.1"
+clap = { version = "4.1.11", features = ["derive"] }
+serde = "1.0.198"
+oss-rust-sdk = "=0.10.0"
+tokio-util = "0.7.13"
+bytes = "1.4"
+futures = "0.3"
+log = "0.4"
+env_logger = "0.10"
