--- a/rust_processing/quality-rs/Cargo.toml
+++ b/rust_processing/quality-rs/Cargo.toml
@@ -13,7 +13,14 @@ glob = "0.3.1"
 rand = "0.8"
 threadpool = "1.8.1"
 clap = { version = "4.1.11", features = ["derive"] }
+bincode = "1.3.3"
+tar = "0.4.40"
+uuid = {version ="1.8.0", features = ["v4", "fast-rng", "macro-diagnostics"]}
+indicatif = "0.17.8"
+flate2 = "1.0"
 serde = "1.0.198"
+base64 = "0.22.1"
+rustc-hash = "1.1.0"
 oss-rust-sdk = "=0.10.0"
 tokio-util = "0.7.13"
 bytes = "1.4"
