--- a/baselines/baselines_configs/v2_test_0709.yaml
+++ b/baselines/baselines_configs/v2_test_0709.yaml
@@ -3,6 +3,11 @@
   steps:
     - func: email_and_phone_removal_modifier
     - func: citation_removal_modifier
+    - func: substring_line_modifier
+      max_length: 5
+      banlist: ""
+      banlist_file: "baselines/mappers/banlists/short_line_keywords.txt"
+      location: prefix
     - func: short_line_modifier
     - func: substring_line_modifier
       max_length: 10
@@ -22,7 +27,7 @@
       max_length: 10
       banlist: "Sign-in"
       location: prefix
-      remove_substring_only: True
+      remove_substring_only: False
     - func: line_removal_modifier
       min_word_cnt_per_line: 1
     - func: word_length_modifier
