--- a/rust_processing/quality-rs/Cargo.toml
+++ b/rust_processing/quality-rs/Cargo.toml
@@ -32,3 +32,4 @@ regex = "1.11.1"
 once_cell = "1.21.3"
 counter = "0.6.0"
 ngrams = "1.0.1"
+indexmap = { version = "2.10.0", features = ["serde"] }
