--- a/c4noclean_prepare.yaml
+++ b/c4noclean_prepare.yaml
@@ -35,11 +35,11 @@ spec:
             value: "6380"			
         args:
           - "--readable_name"
-          - "c4_noclean_v2_template_line_sampled"
+          - "c4_noclean_v2_min_word_4_sampled"
           - "--output_dir"
           - "oss://si002558te8h/dclm/output/"
           - "--config_path"
-          - "baselines/baselines_configs/v2_test_0709.yaml"
+          - "baselines/baselines_configs/v2_test.yaml"
           - "--oss_temp_dir"
           - "oss://si002558te8h/dclm/pool/temp_dir_500/"
           - "--source_name"
@@ -63,8 +63,8 @@ spec:
           - "--ignore_failures"
         volumeMounts:
           - name: dclm-config-volume
-            mountPath: "/app/dclm-sci/baselines/baselines_configs/v2_test_0709.yaml"
-            subPath: "v2_test_0709.yaml"
+            mountPath: "/app/dclm-sci/baselines/baselines_configs/v2_test.yaml"
+            subPath: "v2_test.yaml"
         imagePullPolicy: IfNotPresent
       volumes:
         - name: dclm-config-volume
