--- a/rust_processing/quality-rs/Cargo.toml
+++ b/rust_processing/quality-rs/Cargo.toml
@@ -33,3 +33,6 @@ once_cell = "1.21.3"
 counter = "0.6.0"
 ngrams = "1.0.1"
 indexmap = { version = "2.10.0", features = ["serde"] }
+jemallocator = "0.5.4"
+eyre = "0.6.10"
+color-eyre = { version = "0.6.3" }
