--- a/rust_processing/quality-rs/Cargo.toml
+++ b/rust_processing/quality-rs/Cargo.toml
@@ -3,6 +3,10 @@ name = "quality-rs"
 version = "0.1.0"
 edition = "2021"
 
+[lib]
+name = "quality_rs"
+path = "src/lib.rs"
+
 [dependencies]
 anyhow = "1.0"
 serde_json = "1.0.97"
